--- a/Demo/superplayerkit/src/main/res/values/strings.xml
+++ b/Demo/superplayerkit/src/main/res/values/strings.xml
@@ -16,4 +16,13 @@
     <string name="superplayer_vipwatch_endwatch_tip">试看结束，VIP会员可观看完整视频</string>
     <string name="superplayer_vipwatch_open_vip_tip">开通VIP会员</string>
     <string name="superplayer_vipwatch_retry_tip">重新试看</string>
+    <string name="superplayer_resolution_name">%1$s (%2$dp)</string>
+    <string name="superplayer_flu">流畅</string>
+    <string name="superplayer_sd">标清</string>
+    <string name="superplayer_hd">高清</string>
+    <string name="superplayer_fsd">全标清</string>
+    <string name="superplayer_fhd">全高清</string>
+    <string name="superplayer_fhd2">超清</string>
+    <string name="superplayer_2k">2K</string>
+    <string name="superplayer_4k">4K</string>
 </resources>
